--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: mobapps
+name: educonnect
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -11,14 +11,30 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  shared_preferences: ^2.2.3
+  path_provider: ^2.1.5
   provider: ^6.0.5
+  syncfusion_flutter_pdfviewer: 29.2.7 
+  
   flutter_localizations:
     sdk: flutter
+
+  flutter_gen: ^5.10.0 
+  intl: any 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
+  generate: true
+
+
+l10n:
+    arb-dir: lib/l10n
+    template-arb-file: app_en.arb
+    output-localization-file: app_localizations.dart
