--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   video_player: ^2.8.1 # Gunakan versi terbaru yang stabil
   chewie: ^1.7.4 # Ini membantu dalam kontrol UI video
+  file_picker: ^8.0.0
   provider: 6.1.5
   flutter_localizations:
     sdk: flutter
